Added automatic generation of adapters documentation and assembly-level reports for tests.

--- a/Src/Clide.props
+++ b/Src/Clide.props
@@ -80,8 +80,8 @@
 			<Visible>False</Visible>
 		</AvailableItemName>
 
-		<AvailableItemName Include="TestReport">
+		<AvailableItemName Include="AssemblyReport">
 			<Visible>False</Visible>
 		</AvailableItemName>
-	</ItemGroup>
+    </ItemGroup>
 </Project>
