--- a/Src/Clide/packages.config
+++ b/Src/Clide/packages.config
@@ -4,6 +4,7 @@
   <package id="Adapter.Interfaces.Source" version="1.1.1301.1418" targetFramework="net40" />
   <package id="Adapter.Sdk.Source" version="1.1.1301.1418" targetFramework="net40" />
   <package id="Adapter.Source" version="1.1.1301.1418" targetFramework="net40" />
+  <package id="Clarius.TransformOnBuild" version="1.0.5" targetFramework="net40" />
   <package id="CommonComposition.Mef.Source" version="0.2.3" targetFramework="net40" />
   <package id="CommonComposition.Source" version="0.2.3" targetFramework="net40" />
   <package id="CommonServiceLocator.Source" version="1.0.2" targetFramework="net40" />
