--- a/Src/IntegrationTests/IntegrationTests.csproj
+++ b/Src/IntegrationTests/IntegrationTests.csproj
@@ -16,6 +16,7 @@
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputPath>bin\$(Configuration)\$(VisualStudioVersion)\</OutputPath>
     <IntermediateOutputPath>obj\$(Configuration)\$(VisualStudioVersion)\</IntermediateOutputPath>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
   </PropertyGroup>
   <PropertyGroup>
     <VSSDK>$(VSSDK100Install)VisualStudioIntegration\Common\Assemblies\v4.0\</VSSDK>
@@ -146,13 +147,13 @@
       <Link>ClariusLabs.licenseheader</Link>
     </None>
     <None Include="app.config" />
-        <AssemblyReport Include="HowTo\HowTo.tt">
-            <OutputExtension>.md</OutputExtension>            
-        </AssemblyReport>
-        <None Include="packages.config" />
-        <AssemblyReport Include="TestReport.tt">
-            <OutputExtension>.txt</OutputExtension>
-        </AssemblyReport>
+    <AssemblyReport Include="HowTo\HowTo.tt">
+      <OutputExtension>.md</OutputExtension>
+    </AssemblyReport>
+    <None Include="packages.config" />
+    <AssemblyReport Include="TestReport.tt">
+      <OutputExtension>.txt</OutputExtension>
+    </AssemblyReport>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Clide\Clide.csproj">
