--- a/Src/Clide/packages.config
+++ b/Src/Clide/packages.config
@@ -1,28 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Adapter.Implementation.Source" version="1.1.1301.1418" targetFramework="net40" />
-  <package id="Adapter.Interfaces.Source" version="1.1.1301.1418" targetFramework="net40" />
-  <package id="Adapter.Sdk.Source" version="1.1.1301.1418" targetFramework="net40" />
-  <package id="Adapter.Source" version="1.1.1301.1418" targetFramework="net40" />
-  <package id="Clarius.TransformOnBuild" version="1.1.1" targetFramework="net40" />
-  <package id="CommonComposition.Mef.Source" version="0.2.3" targetFramework="net40" />
-  <package id="CommonComposition.Source" version="0.2.3" targetFramework="net40" />
-  <package id="CommonServiceLocator.Source" version="1.0.2" targetFramework="net40" />
-  <package id="netfx-Guard" version="1.3.3.2" targetFramework="net40" />
-  <package id="netfx-Reflector" version="1.0.0.10" targetFramework="net40" />
-  <package id="netfx-System.AmbientSingleton" version="1.2.1.0" targetFramework="net40" />
-  <package id="netfx-System.AppDomainData" version="1.1.0.3" targetFramework="net40" />
-  <package id="netfx-System.Collections.Generic.DictionaryGetOrAdd" version="1.1.1.1" targetFramework="net40" />
-  <package id="netfx-System.Collections.Generic.IEnumerable.Traverse" version="1.1.0.0" targetFramework="net40" />
-  <package id="netfx-System.ComponentModel.Attributes" version="1.0.0.0" targetFramework="net40" />
-  <package id="netfx-System.Dynamic.Reflection" version="1.1.1.0" targetFramework="net45" />
-  <package id="netfx-System.Reflection.GetCustomAttribute" version="1.1.0.0" targetFramework="net40" />
-  <package id="netfx-System.ServiceProvider" version="1.2.1.0" targetFramework="net40" />
-  <package id="netfx-System.StringFormatWith" version="1.1.0.0" targetFramework="net40" />
-  <package id="netfx-System.StringResources" version="2.0.0" targetFramework="net40" />
-  <package id="netfx-System.TypeInheritance" version="1.1.1.0" targetFramework="net45" />
-  <package id="netfx-System.Windows.Threading.DispatcherInvokeExtensions" version="1.0.0.0" targetFramework="net40" />
-  <package id="TaskHelpers.Sources" version="0.3" targetFramework="net40" />
-  <package id="Tracer" version="1.1.5" targetFramework="net40" />
-  <package id="Tracer.SystemDiagnostics" version="1.1.9" targetFramework="net40" />
+  <package id="Adapter.Implementation.Source" version="1.1.1301.1418" targetFramework="net40" developmentDependency="true" />
+  <package id="Adapter.Interfaces.Source" version="1.1.1301.1418" targetFramework="net40" developmentDependency="true" />
+  <package id="Adapter.Sdk.Source" version="1.1.1301.1418" targetFramework="net40" developmentDependency="true" />
+  <package id="Adapter.Source" version="1.1.1301.1418" targetFramework="net40" developmentDependency="true" />
+  <package id="Clarius.TransformOnBuild" version="1.1.1" targetFramework="net40" developmentDependency="true" />
+  <package id="CommonComposition.Mef.Source" version="0.2.3" targetFramework="net40" developmentDependency="true" />
+  <package id="CommonComposition.Source" version="0.2.3" targetFramework="net40" developmentDependency="true" />
+  <package id="CommonServiceLocator.Source" version="1.0.2" targetFramework="net40" developmentDependency="true" />
+  <package id="netfx-Guard" version="1.3.3.2" targetFramework="net40" developmentDependency="true" />
+  <package id="netfx-Reflector" version="1.0.0.10" targetFramework="net40" developmentDependency="true" />
+  <package id="netfx-System.AmbientSingleton" version="1.2.1.0" targetFramework="net40" developmentDependency="true" />
+  <package id="netfx-System.AppDomainData" version="1.1.0.3" targetFramework="net40" developmentDependency="true" />
+  <package id="netfx-System.Collections.Generic.DictionaryGetOrAdd" version="1.1.1.1" targetFramework="net40" developmentDependency="true" />
+  <package id="netfx-System.Collections.Generic.IEnumerable.Traverse" version="1.1.0.0" targetFramework="net40" developmentDependency="true" />
+  <package id="netfx-System.ComponentModel.Attributes" version="1.0.0.0" targetFramework="net40" developmentDependency="true" />
+  <package id="netfx-System.Dynamic.Reflection" version="1.1.1.0" targetFramework="net45" developmentDependency="true" />
+  <package id="netfx-System.Reflection.GetCustomAttribute" version="1.1.0.0" targetFramework="net40" developmentDependency="true" />
+  <package id="netfx-System.ServiceProvider" version="1.2.1.0" targetFramework="net40" developmentDependency="true" />
+  <package id="netfx-System.StringFormatWith" version="1.1.0.0" targetFramework="net40" developmentDependency="true" />
+  <package id="netfx-System.StringResources" version="2.0.0" targetFramework="net40" developmentDependency="true" />
+  <package id="netfx-System.TypeInheritance" version="1.1.1.0" targetFramework="net45" developmentDependency="true" />
+  <package id="netfx-System.Windows.Threading.DispatcherInvokeExtensions" version="1.0.0.0" targetFramework="net40" developmentDependency="true" />
+  <package id="TaskHelpers.Sources" version="0.3" targetFramework="net40" developmentDependency="true" />
+  <package id="Tracer" version="1.1.5" targetFramework="net40" developmentDependency="true" />
+  <package id="Tracer.SystemDiagnostics" version="1.1.9" targetFramework="net40" developmentDependency="true" />
 </packages>
