--- a/Src/Clide/Clide.csproj
+++ b/Src/Clide/Clide.csproj
@@ -36,6 +36,7 @@
     <Reference Include="Microsoft.VisualStudio.Settings, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=x86">
       <SpecificVersion>True</SpecificVersion>
       <HintPath>$(SdkLib)Microsoft.VisualStudio.Settings.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.Shell.10.0, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>True</SpecificVersion>
