--- a/Src/Clide/Clide.csproj
+++ b/Src/Clide/Clide.csproj
@@ -174,6 +174,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.tt</DependentUpon>
     </Compile>
+    <Compile Include="ProvideComponentsAttribute.cs" />
     <Compile Include="References\IReferenceProvider.cs">
       <SubType>Code</SubType>
     </Compile>
