Make local resolver a source-only nuget package, to guarantee custom resolution
Fixes #26

--- a/Src/Clide.Resolver/Clide.Resolver.nuspec
+++ b/Src/Clide.Resolver/Clide.Resolver.nuspec
@@ -14,4 +14,7 @@
         <copyright>Copyright 2012</copyright>
         <tags>visualstudio vsx extensibility</tags>
     </metadata>
+	<files>
+		<file src="LocalResolver.cs" target="content\External\Clide\LocalResolver.cs" />
+	</files>
 </package>
