--- a/Src/Clide.Resolver/Clide.Resolver.csproj
+++ b/Src/Clide.Resolver/Clide.Resolver.csproj
@@ -1,43 +1,43 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-	<Import Project="$(MSBuildThisFileDirectory)..\..\Common\ClariusLabs.props" />
-	<Import Project="$(MSBuildThisFileDirectory)..\Clide.props" />
-	<PropertyGroup>
-		<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-		<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-		<ProjectGuid>{A023A27B-2AA8-4461-932A-25A6DD17FEA6}</ProjectGuid>
-		<OutputType>Library</OutputType>
-		<AppDesignerFolder>Properties</AppDesignerFolder>
-		<RootNamespace>Clide</RootNamespace>
-		<AssemblyName>Clide.Resolver</AssemblyName>
-		<TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-		<FileAlignment>512</FileAlignment>
-		<OutputPath>nuget\lib\$(NugetTarget)\</OutputPath>
-		<DocumentationFile>$(OutputPath)\Clide.Resolver.xml</DocumentationFile>
-		<SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-	</PropertyGroup>
-	<ItemGroup>
-		<Reference Include="System" />
-		<Reference Include="System.Core" />
-	</ItemGroup>
-	<ItemGroup>
-		<Compile Include="..\GlobalAssemblyInfo.cs">
-			<Link>Properties\GlobalAssemblyInfo.cs</Link>
-		</Compile>
-		<Compile Include="LocalResolver.cs" />
-		<Compile Include="Properties\AssemblyInfo.cs" />
-	</ItemGroup>
-	<ItemGroup>
-		<None Include="..\..\Common\ClariusLabs.licenseheader">
-			<Link>ClariusLabs.licenseheader</Link>
-		</None>
-		<NuSpec Include="Clide.Resolver.nuspec" />
-	</ItemGroup>
-	<Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-	<Import Project="$(MSBuildThisFileDirectory)..\Clide.targets" />
-	<Target Name="BuildNuGet" AfterTargets="AfterBuild" Condition="$(NuGet) == 'true'">
-		<MakeDir Directories="$(DropDirectory.TrimEnd('\'))" Condition="!Exists($(DropDirectory.TrimEnd('\')))" />
-		<Exec Command="&quot;$(NuGetExe)&quot; pack -NoPackageAnalysis &quot;%(NuSpec.FullPath)&quot; -OutputDirectory &quot;$(DropDirectory.TrimEnd('\'))&quot; -Version &quot;$(PackageVersion)&quot;"
-              ContinueOnError="false" />
-	</Target>
+  <Import Project="$(MSBuildThisFileDirectory)..\..\Common\ClariusLabs.props" />
+  <Import Project="$(MSBuildThisFileDirectory)..\Clide.props" />
+  <PropertyGroup>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProjectGuid>{A023A27B-2AA8-4461-932A-25A6DD17FEA6}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>Clide</RootNamespace>
+    <AssemblyName>Clide.Resolver</AssemblyName>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <FileAlignment>512</FileAlignment>
+    <OutputPath>nuget\lib\$(NugetTarget)\</OutputPath>
+    <DocumentationFile>$(OutputPath)\Clide.Resolver.xml</DocumentationFile>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <TargetFrameworkProfile />
+  </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
+    <Compile Include="LocalResolver.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\Common\ClariusLabs.licenseheader">
+      <Link>ClariusLabs.licenseheader</Link>
+    </None>
+    <NuSpec Include="Clide.Resolver.nuspec" />
+  </ItemGroup>
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\Clide.targets" />
+  <Target Name="BuildNuGet" AfterTargets="AfterBuild" Condition="$(CreateNuGet) == 'true'">
+    <MakeDir Directories="$(DropDirectory.TrimEnd('\'))" Condition="!Exists($(DropDirectory.TrimEnd('\')))" />
+    <Exec Command="&quot;$(NuGetExe)&quot; pack -NoPackageAnalysis &quot;%(NuSpec.FullPath)&quot; -OutputDirectory &quot;$(DropDirectory.TrimEnd('\'))&quot; -Version &quot;$(PackageVersion)&quot;" ContinueOnError="false" />
+  </Target>
 </Project>
