--- a/Src/IntegrationPackage/packages.config
+++ b/Src/IntegrationPackage/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Moq" version="4.2.1510.2205" targetFramework="net45" />
+  <package id="VSSDK.CoreUtility" version="11.0.4" targetFramework="net45" />
+  <package id="VSSDK.CoreUtility.11" version="11.0.4" targetFramework="net45" />
   <package id="VSSDK.DTE" version="7.0.4" targetFramework="net45" />
+  <package id="VSSDK.DTE.10" version="10.0.4" targetFramework="net45" />
+  <package id="VSSDK.DTE.8" version="8.0.4" targetFramework="net45" />
+  <package id="VSSDK.DTE.9" version="9.0.4" targetFramework="net45" />
   <package id="VSSDK.GraphModel" version="11.0.4" targetFramework="net45" />
   <package id="VSSDK.IDE" version="7.0.4" targetFramework="net45" />
   <package id="VSSDK.IDE.10" version="10.0.4" targetFramework="net45" />
@@ -17,7 +21,9 @@
   <package id="VSSDK.Shell.Interop.11" version="11.0.4" targetFramework="net45" />
   <package id="VSSDK.Shell.Interop.8" version="8.0.4" targetFramework="net45" />
   <package id="VSSDK.Shell.Interop.9" version="9.0.4" targetFramework="net45" />
+  <package id="VSSDK.Text" version="11.0.4" targetFramework="net45" />
+  <package id="VSSDK.Text.11" version="11.0.4" targetFramework="net45" />
   <package id="VSSDK.TextManager.Interop" version="7.0.4" targetFramework="net45" />
   <package id="VSSDK.TextManager.Interop.8" version="8.0.4" targetFramework="net45" />
-  <package id="xunit" version="1.9.2" targetFramework="net45" />
+  <package id="VSSDK.VSLangProj" version="7.0.4" targetFramework="net45" />
 </packages>
