--- a/Src/IntegrationTests/packages.config
+++ b/Src/IntegrationTests/packages.config
@@ -2,4 +2,34 @@
 <packages>
   <package id="Moq" version="4.1.1311.0615" targetFramework="net45" />
   <package id="netfx-Assertions" version="1.0.0.9" targetFramework="net40" />
+  <package id="VSSDK.ComponentModelHost" version="11.0.4" targetFramework="net45" />
+  <package id="VSSDK.ComponentModelHost.11" version="11.0.4" targetFramework="net45" />
+  <package id="VSSDK.CoreUtility" version="11.0.4" targetFramework="net45" />
+  <package id="VSSDK.CoreUtility.11" version="11.0.4" targetFramework="net45" />
+  <package id="VSSDK.DTE" version="7.0.4" targetFramework="net45" />
+  <package id="VSSDK.DTE.10" version="10.0.4" targetFramework="net45" />
+  <package id="VSSDK.DTE.8" version="8.0.4" targetFramework="net45" />
+  <package id="VSSDK.DTE.9" version="9.0.4" targetFramework="net45" />
+  <package id="VSSDK.GraphModel" version="11.0.4" targetFramework="net45" />
+  <package id="VSSDK.IDE" version="7.0.4" targetFramework="net45" />
+  <package id="VSSDK.IDE.10" version="10.0.4" targetFramework="net45" />
+  <package id="VSSDK.IDE.11" version="11.0.4" targetFramework="net45" />
+  <package id="VSSDK.IDE.8" version="8.0.4" targetFramework="net45" />
+  <package id="VSSDK.IDE.9" version="9.0.4" targetFramework="net45" />
+  <package id="VSSDK.Language" version="11.0.4" targetFramework="net45" />
+  <package id="VSSDK.Language.11" version="11.0.4" targetFramework="net45" />
+  <package id="VSSDK.OLE.Interop" version="7.0.4" targetFramework="net45" />
+  <package id="VSSDK.Shell.11" version="11.0.4" targetFramework="net45" />
+  <package id="VSSDK.Shell.Immutable.10" version="10.0.4" targetFramework="net45" />
+  <package id="VSSDK.Shell.Immutable.11" version="11.0.4" targetFramework="net45" />
+  <package id="VSSDK.Shell.Interop" version="7.0.4" targetFramework="net45" />
+  <package id="VSSDK.Shell.Interop.10" version="10.0.4" targetFramework="net45" />
+  <package id="VSSDK.Shell.Interop.11" version="11.0.4" targetFramework="net45" />
+  <package id="VSSDK.Shell.Interop.8" version="8.0.4" targetFramework="net45" />
+  <package id="VSSDK.Shell.Interop.9" version="9.0.4" targetFramework="net45" />
+  <package id="VSSDK.Text" version="11.0.4" targetFramework="net45" />
+  <package id="VSSDK.Text.11" version="11.0.4" targetFramework="net45" />
+  <package id="VSSDK.TextManager.Interop" version="7.0.4" targetFramework="net45" />
+  <package id="VSSDK.TextManager.Interop.8" version="8.0.4" targetFramework="net45" />
+  <package id="VSSDK.VSLangProj" version="7.0.4" targetFramework="net45" />
 </packages>
